test/corpus/diabolical-inline.txt
===
Fuzzed Inline 1
===
procedure Test;
begin
  const C586 = 59;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 2
===
procedure Test;
begin
  var V955: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 3
===
procedure Test;
begin
  for var I23 := 0 to 1 do var V848: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber))) (kEnd))))

===
Fuzzed Inline 4
===
procedure Test;
begin
  var V689 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 5
===
procedure Test;
begin
  var V75: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 6
===
procedure Test;
begin
  const C225 = 90;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 7
===
procedure Test;
begin
  var V529 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 8
===
procedure Test;
begin
  const C837 = 88;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 9
===
procedure Test;
begin
  var V508 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 10
===
procedure Test;
begin
  var V668 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 11
===
procedure Test;
begin
  const C839 = 75;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 12
===
procedure Test;
begin
  var V278 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 13
===
procedure Test;
begin
  var V456 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 14
===
procedure Test;
begin
  var V263 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 15
===
procedure Test;
begin
  for var I9 := 0 to 16 do const C174 = 87;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber)))) (kEnd))))

===
Fuzzed Inline 16
===
procedure Test;
begin
  const C737 = 89;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 17
===
procedure Test;
begin
  for var I15 := 0 to 8 do const C615 = 68;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber)))) (kEnd))))

===
Fuzzed Inline 18
===
procedure Test;
begin
  var V431: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 19
===
procedure Test;
begin
  var V597: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 20
===
procedure Test;
begin
  var V240 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 21
===
procedure Test;
begin
  var V315 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 22
===
procedure Test;
begin
  var V962 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 23
===
procedure Test;
begin
  var V495 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 24
===
procedure Test;
begin
  const C193 = 55;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 25
===
procedure Test;
begin
  const C455 = 53;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 26
===
procedure Test;
begin
  var V921 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 27
===
procedure Test;
begin
  const C0 = 98;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 28
===
procedure Test;
begin
  for var I29 := 0 to 0 do G := 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (identifier) (kAssign) (literalNumber))) (kEnd))))

===
Fuzzed Inline 29
===
procedure Test;
begin
  const C509 = 89;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 30
===
procedure Test;
begin
  const C696 = 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 31
===
procedure Test;
begin
  for var I40 := 0 to 14 do G := 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (identifier) (kAssign) (literalNumber))) (kEnd))))

===
Fuzzed Inline 32
===
procedure Test;
begin
  var V511 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 33
===
procedure Test;
begin
  var V719: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 34
===
procedure Test;
begin
  for var I43 := 0 to 10 do G := 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (identifier) (kAssign) (literalNumber))) (kEnd))))

===
Fuzzed Inline 35
===
procedure Test;
begin
  for var I70 := 0 to 13 do var V962 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber))) (kEnd))))

===
Fuzzed Inline 36
===
procedure Test;
begin
  var V124 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 37
===
procedure Test;
begin
  const C385 = 87;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 38
===
procedure Test;
begin
  const C370 = 43;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 39
===
procedure Test;
begin
  for var I31 := 0 to 7 do var V624: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber))) (kEnd))))

===
Fuzzed Inline 40
===
procedure Test;
begin
  var V501 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 41
===
procedure Test;
begin
  var V243 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 42
===
procedure Test;
begin
  for var I10 := 0 to 2 do G := 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (identifier) (kAssign) (literalNumber))) (kEnd))))

===
Fuzzed Inline 43
===
procedure Test;
begin
  var V207 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 44
===
procedure Test;
begin
  const C288 = 91;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 45
===
procedure Test;
begin
  var V939 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 46
===
procedure Test;
begin
  const C13 = 54;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 47
===
procedure Test;
begin
  var V399 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 48
===
procedure Test;
begin
  var V672: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 49
===
procedure Test;
begin
  var V653 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 50
===
procedure Test;
begin
  var V897 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 51
===
procedure Test;
begin
  var V646 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 52
===
procedure Test;
begin
  var V160: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 53
===
procedure Test;
begin
  var V194: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 54
===
procedure Test;
begin
  var V475 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 55
===
procedure Test;
begin
  var V432 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 56
===
procedure Test;
begin
  var V781: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 57
===
procedure Test;
begin
  var V654 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 58
===
procedure Test;
begin
  var V39 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 59
===
procedure Test;
begin
  var V277: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 60
===
procedure Test;
begin
  var V858 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 61
===
procedure Test;
begin
  var V744: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 62
===
procedure Test;
begin
  for var I31 := 0 to 4 do var V905: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber))) (kEnd))))

===
Fuzzed Inline 63
===
procedure Test;
begin
  var V908 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 64
===
procedure Test;
begin
  var V893 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 65
===
procedure Test;
begin
  for var I55 := 0 to 10 do var V582 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber)))) (kEnd))))

===
Fuzzed Inline 66
===
procedure Test;
begin
  var V656 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 67
===
procedure Test;
begin
  const C532 = 49;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 68
===
procedure Test;
begin
  for var I75 := 0 to 6 do var V246 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber))) (kEnd))))

===
Fuzzed Inline 69
===
procedure Test;
begin
  for var I40 := 0 to 7 do const C349 = 86;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber)))) (kEnd))))

===
Fuzzed Inline 70
===
procedure Test;
begin
  var V722 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 71
===
procedure Test;
begin
  var V802 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 72
===
procedure Test;
begin
  for var I42 := 0 to 13 do var V977: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber))) (kEnd))))

===
Fuzzed Inline 73
===
procedure Test;
begin
  var V726 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 74
===
procedure Test;
begin
  const C178 = 30;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 75
===
procedure Test;
begin
  const C455 = 45;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 76
===
procedure Test;
begin
  var V173: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 77
===
procedure Test;
begin
  const C567 = 39;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 78
===
procedure Test;
begin
  var V134 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 79
===
procedure Test;
begin
  var V925 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 80
===
procedure Test;
begin
  var V301 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 81
===
procedure Test;
begin
  var V882: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 82
===
procedure Test;
begin
  var V477 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 83
===
procedure Test;
begin
  var V970 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 84
===
procedure Test;
begin
  for var I85 := 0 to 4 do for var I80 := 0 to 15 do const C281 = 55;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))))) (kEnd))))

===
Fuzzed Inline 85
===
procedure Test;
begin
  var V492 := G + 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (exprBinary (identifier) (kAdd) (literalNumber))) (kEnd))))

===
Fuzzed Inline 86
===
procedure Test;
begin
  var V167: Integer := 10;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (varAssignDef (kVar) (identifier) (typeref (identifier))) (kAssign) (literalNumber)) (kEnd))))

===
Fuzzed Inline 87
===
procedure Test;
begin
  const C259 = 1;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 88
===
procedure Test;
begin
  for var I26 := 0 to 3 do const C391 = 82;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber)))) (kEnd))))

===
Fuzzed Inline 89
===
procedure Test;
begin
  const C111 = 41;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))

===
Fuzzed Inline 90
===
procedure Test;
begin
  for var I0 := 0 to 2 do var V274 := 20;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (for (kFor) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber)) (kTo) (literalNumber) (kDo) (assignment (varAssignDef (kVar) (identifier)) (kAssign) (literalNumber))) (kEnd))))

===
Fuzzed Inline 91
===
procedure Test;
begin
  const C752 = 16;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (inlineConst (kConst) (identifier) (defaultValue (kEq) (literalNumber))) (kEnd))))
